# AnalyticsLiv-Assignment

./: Example.txt  README.md  main.py  pyproject.toml  requirements.txt  test.py
Supabase/: Create_Collections.sql  client.py
assets/: sales_data.csv
graph/: graph.py
graph/Prompts/: prompt.py  router_prompt.py
graph/chains/: routed_retrievalQA.py
graph/retrievals/: all_csv_retriever.py  data_retriever.py  routed_retriever.py  supabase_retriever.py
uploads/: faq_data.txt  sales_data.csv
