[project]
name = "analyticsliv-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.20",
    "dotenv-loader>=1.0.4",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-google-genai>=2.1.10",
    "lark>=1.2.2",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "supabase>=2.18.1",
    "vecs>=0.4.5",
]
